# okn-editor

./: CMakeLists.txt  README.md
include/okn/editor/: api.hpp  app.hpp  command_manager.hpp  config.hpp  editor.hpp  editor_app.hpp  editor_engine.hpp  editor_export.hpp  editor_types.hpp
include/okn/editor/animation/: anim_preview.hpp  anim_state_machine.hpp  anim_timeline.hpp
include/okn/editor/asset/: asset_batch.hpp  asset_browser.hpp  asset_import_rules.hpp  asset_inspector.hpp  asset_pack.hpp  asset_validation.hpp  build_report.hpp
include/okn/editor/audio/: audio_inspector.hpp  mixer_view.hpp
include/okn/editor/commands/: command.hpp  history.hpp  undo_stack.hpp
include/okn/editor/crash/: autosave.hpp
include/okn/editor/diagnostics/: frame_debugger.hpp  metrics_view.hpp
include/okn/editor/docking/: docking_manager.hpp
include/okn/editor/i18n/: i18n_manager.hpp
include/okn/editor/integration/: asset_bridge.hpp  audio_bridge.hpp  ecs_bridge.hpp  network_bridge.hpp  physics_bridge.hpp  platform_bridge.hpp  render_bridge.hpp  script_bridge.hpp
include/okn/editor/layout/: layout_manager.hpp
include/okn/editor/logging/: log_panel.hpp
include/okn/editor/material/: material_editor.hpp
include/okn/editor/navigation/: navmesh_editor.hpp
include/okn/editor/net/: net_config.hpp  net_debug.hpp
include/okn/editor/panels/: animation_panel.hpp  audio_panel.hpp  console_panel.hpp  diff_panel.hpp  frame_debugger_panel.hpp  hierarchy_panel.hpp  inspector_panel.hpp  material_panel.hpp  navigation_panel.hpp  net_panel.hpp  panel_manager.hpp  particle_panel.hpp  physics_panel.hpp  profiling_panel.hpp  project_panel.hpp  resource_report_panel.hpp  script_panel.hpp  shader_panel.hpp  task_progress_panel.hpp  ui_panel.hpp  viewport_panel.hpp
include/okn/editor/particles/: particle_editor.hpp
include/okn/editor/physics/: physics_editor.hpp
include/okn/editor/plugins/: plugin_manager.hpp
include/okn/editor/profiles/: profile_manager.hpp
include/okn/editor/profiling/: profiler_view.hpp  timeline.hpp
include/okn/editor/project/: project_manager.hpp
include/okn/editor/scene/: prefab.hpp  scene_manager.hpp  selection.hpp  world_switcher.hpp
include/okn/editor/script/: script_browser.hpp  script_debugger.hpp  script_hot_reload.hpp
include/okn/editor/settings/: user_settings.hpp
include/okn/editor/shader/: shader_cache_view.hpp  shader_editor.hpp  shader_hot_reload.hpp
include/okn/editor/tasks/: task_manager.hpp
include/okn/editor/themes/: theme_manager.hpp
include/okn/editor/tools/: build_tasks.hpp  cli_runner.hpp
include/okn/editor/ui/: ui_designer.hpp
include/okn/editor/utils/: clipboard.hpp  drag_drop.hpp  file_dialogs.hpp  handle.hpp  json_io.hpp  preview_cache.hpp  selection_sync.hpp  shortcut_manager.hpp
include/okn/editor/vcs/: git_integration.hpp
include/okn/editor/viewport/: capture.hpp  debug_views.hpp  gizmo.hpp  overlay.hpp  viewport.hpp
resources/: AssetBrowserPanel.qml  ConsolePanel.qml  HierarchyPanel.qml  InspectorPanel.qml  MainWindow.qml  ProfilerPanel.qml  ViewportPanel.qml  main.qml  qml.qrc
samples/: CMakeLists.txt  sample_asset_pipeline.cpp  sample_docking.cpp  sample_minimal.cpp  sample_script_debug.cpp  sample_viewport_render.cpp
src/: api.cpp  app.cpp  command_manager.cpp  config.cpp  editor.cpp  editor_app.cpp  editor_app_qt.cpp  editor_engine.cpp  editor_export.cpp  editor_stub.cpp  editor_types.cpp  main.cpp
src/animation/: anim_preview.cpp  anim_state_machine.cpp  anim_timeline.cpp
src/asset/: asset_batch.cpp  asset_browser.cpp  asset_import_rules.cpp  asset_inspector.cpp  asset_pack.cpp  asset_validation.cpp  build_report.cpp
src/audio/: audio_inspector.cpp  mixer_view.cpp
src/commands/: command.cpp  history.cpp  undo_stack.cpp
src/crash/: autosave.cpp
src/diagnostics/: frame_debugger.cpp  metrics_view.cpp
src/docking/: docking_manager.cpp
src/i18n/: i18n_manager.cpp
src/integration/: asset_bridge.cpp  audio_bridge.cpp  ecs_bridge.cpp  network_bridge.cpp  physics_bridge.cpp  platform_bridge.cpp  render_bridge.cpp  script_bridge.cpp
src/layout/: layout_manager.cpp
src/logging/: log_panel.cpp
src/material/: material_editor.cpp
src/navigation/: navmesh_editor.cpp
src/net/: net_config.cpp  net_debug.cpp
src/panels/: animation_panel.cpp  audio_panel.cpp  console_panel.cpp  diff_panel.cpp  frame_debugger_panel.cpp  hierarchy_panel.cpp  inspector_panel.cpp  material_panel.cpp  navigation_panel.cpp  net_panel.cpp  panel_manager.cpp  particle_panel.cpp  physics_panel.cpp  profiling_panel.cpp  project_panel.cpp  resource_report_panel.cpp  script_panel.cpp  shader_panel.cpp  task_progress_panel.cpp  ui_panel.cpp  viewport_panel.cpp
src/particles/: particle_editor.cpp
src/physics/: physics_editor.cpp
src/plugins/: plugin_manager.cpp
src/profiles/: profile_manager.cpp
src/profiling/: profiler_view.cpp  timeline.cpp
src/project/: project_manager.cpp
src/scene/: prefab.cpp  scene_manager.cpp  selection.cpp  world_switcher.cpp
src/script/: script_browser.cpp  script_debugger.cpp
src/settings/: user_settings.cpp
src/shader/: shader_cache_view.cpp  shader_editor.cpp  shader_hot_reload.cpp
src/tasks/: task_manager.cpp
src/themes/: theme_manager.cpp
src/tools/: build_tasks.cpp  cli_runner.cpp
src/ui/: ui_designer.cpp
src/utils/: clipboard.cpp  drag_drop.cpp  file_dialogs.cpp  json_io.cpp  preview_cache.cpp  selection_sync.cpp  shortcut_manager.cpp
src/vcs/: git_integration.cpp
src/viewport/: capture.cpp  debug_views.cpp  gizmo.cpp  overlay.cpp  viewport.cpp
tests/: CMakeLists.txt  test_asset_rules.cpp  test_commands.cpp  test_editor.cpp  test_git_integration.cpp  test_layout.cpp  test_plugin_manager.cpp  test_undo_redo.cpp
